src/resources/css/packlink.css
/* ... */
.pl-login-form-label-wrapper {
	margin: 0 0 15px;
	padding: 0;
	font-size: 20px;
	text-transform: uppercase;
}

.pl-login-form-text-wrapper {
	font-size: 14px;
}

.pl-register-form-wrapper {
	position: absolute;
	top: 0;
	right: 5%;
}

.pl-register-btn-section-wrapper {
	display: flex;
	align-items: center;
	color: #5d5d5d;
	font-size: 14px;
}

.pl-register-country-section-wrapper {
	padding: 15px 0;
	border: 1px solid #2095f2;
	border-radius: 3px;
	position: relative;
	display: none;
	animation: pl-fade-in .5s ease;
}

.pl-register-country-title-wrapper {
	text-align: center;
	color: #5d5d5d;
}

.pl-register-country-list-wrapper {
	margin-top: 15px;
	display: flex;
	justify-content: space-evenly;
}

.pl-register-country-list-wrapper a {
	text-decoration: none !important;
}

.pl-country {
	width: 30px;
	line-height: 30px;
	border-radius: 50%;
	text-align: center;
	color: #2095f2;
	font-size: 14px;
	text-transform: uppercase;
}

.pl-register-form-close-btn {
	height: 20px;
	width: 20px;
	position: absolute;
	top: 5px;
	right: 5px;
	text-align: center;
	line-height: 20px;
	cursor: pointer;
}

/* MAPPING PAGE */

.pl-mapping-page-wrapper {
	color: #5d5d5d;
}

.pl-mapping-page-wrapper > div {
	display: flex;
}

.pl-mapping-status-count-label {
	width: 100px;
	line-height: 50px;
}

.pl-mapping-page-select-section {
	display: inline;
	width: 350px;
	line-height: 50px;
	align-items: center;
	text-align: center;
	font-size: 14px;
}

.pl-mapping-page-select-section input {
	width: inherit;
	padding: 5px
}

.pl-mapping-page-select-section select {
	width: inherit;
	padding: 5px;
	height: unset;
}

.pl-mapping-page-wrapper-equals {
	width: 50px;
	line-height: 50px;
	text-align: center;
}

/* UTILITY */

.pl-template-section {
	display: none;
}

.pl-autocomplete-list {
	position: absolute;
	top: 38px;
	z-index: 10;
	width: 100%;
	max-height: 250px;
	min-height: 35px;
	padding: 0;
	background: white;
	border: 1px solid #dcdcdc;
	overflow-x: hidden;
	overflow-y: auto;
}

.pl-autocomplete-element {
	line-height: 35px;
	height: 35px;
	padding: 0 10px;
	font-size: 16px;
	color: #5d5d5d;
	list-style-type: none;
	cursor: pointer;
}

.pl-autocomplete-element * {
	pointer-events: none;
}

.pl-autocomplete-element.focus {
	background-color: #1a77c2;
	color: white;
}

.pl-input-mask {
	display: none;
	background-color: rgba(255, 255, 255, 0.5);
	z-index: 100;
	top: 0;
	left: 0;
	right: 15px;
	bottom: 0;
	position: absolute;
}

.pl-spinner {
	position: fixed;
	z-index: 500;
	background-color: rgba(255, 255, 255, 0.7);
	display: none;
	justify-content: center;
	align-items: center;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
}

.pl-spinner div {
	width: 100px;
	height: 100px;
	border: 3px solid transparent;
	border-right-color: #2095F2;
	border-left-color: #2095F2;
	border-radius: 50%;
	animation: pl-rotate 1s linear 0s infinite;
}

.pl-spinner.enabled {
	display: flex;
}

.pl-input-mask.enabled {
	display: block;
}

.pl-table-row-method-type .pl-national {
	display: none;
}

.pl-table-row-method-type.pl-national .pl-national {
	display: block;
}

.pl-table-row-method-type.pl-national .pl-international {
	display: none;
}

.pl-error {
	border: 1px solid #C95C6B !important;
}

.pl-error:hover ~ .pl-error-msg {
	display: flex;
}

.pl-error-msg #pl-error-text {
	display: flex;
	margin-left: 10px;
}

.pl-error-msg #pl-error-text::before {
	content: " ";
	margin-right: 5px;
	width: 16px;
	height: 16px;
	background-image: url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath id='b' d='M0 0h372v51H0z'/%3E%3Cfilter x='-.8%25' y='-5.9%25' width='101.6%25' height='111.8%25' filterUnits='objectBoundingBox' id='a'%3E%3CfeOffset in='SourceAlpha' result='shadowOffsetOuter1'/%3E%3CfeGaussianBlur stdDeviation='1' in='shadowOffsetOuter1' result='shadowBlurOuter1'/%3E%3CfeColorMatrix values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.5 0' in='shadowBlurOuter1'/%3E%3C/filter%3E%3C/defs%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg transform='translate(-10 -9)'%3E%3Cuse fill='%23000' filter='url(%23a)' xlink:href='%23b'/%3E%3Cuse fill='%23ED3E3E' xlink:href='%23b'/%3E%3C/g%3E%3Cpath d='M-10-7.003C-10-8.106-9.107-9-7.999-9H360c1.105 0 2.001.892 2.001 1.997V40H-10V-7.003z' fill='%23FFF'/%3E%3Cg fill='%23ED3E3E' fill-rule='nonzero'%3E%3Cpath d='M7.5.085C3.363.085 0 3.448 0 7.585c0 4.136 3.363 7.5 7.5 7.5 4.137 0 7.5-3.364 7.5-7.5 0-4.137-3.363-7.5-7.5-7.5zm0 .937a6.555 6.555 0 0 1 6.563 6.563A6.555 6.555 0 0 1 7.5 14.147 6.555 6.555 0 0 1 .937 7.585 6.555 6.555 0 0 1 7.5 1.022zM4.687 4.07a1.172 1.172 0 1 0 0 2.344 1.172 1.172 0 0 0 0-2.344zm5.625 0a1.172 1.172 0 1 0 0 2.344 1.172 1.172 0 0 0 0-2.344zM7.5 8.522a4.52 4.52 0 0 0-3.662 1.831.47.47 0 0 0 .762.55c.634-.87 1.69-1.443 2.9-1.443s2.266.572 2.9 1.443a.47.47 0 1 0 .762-.55A4.52 4.52 0 0 0 7.5 8.523z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
	background-repeat: no-repeat;
	background-size: contain;
}

.pl-help {
	color: #2095F2;
	padding-left: 20px;
	position: absolute;
	font-size: 15px;
	bottom: 10px;
}

.pl-contact {
	color: #222;
	padding: 10px 0 0;
}

.pl-link {
	color: #2095F2 !important;
	text-decoration: unset;
}

.pl-error-msg {
	display: none;
	position: absolute;
	bottom: 58px;
	left: 50%;
	transform: translateX(-50%);
	z-index: 1;
	width: calc(100% - 2px);
	padding: 5px 0;
	border-radius: 3px;
	border: 1px solid #e63f3f;
	border-bottom: 3px solid #e63f3f;
	color: #5d5d5d;
	background-color: white;
	text-align: left;
	font-size: 12px;
	animation: pl-fade-in 0.5s ease;
}

.pl-error-msg:after {
	content: '';
	display: block;
	position: absolute;
	left: 50%;
	top: calc(100% + 3px);
	transform: translateX(-50%);
	width: 0;
	height: 0;
	border-style: solid;
	border-color: #e63f3f transparent transparent transparent;
	border-width: 6px;
}

.pl-error-msg i {
	color: #e63f3f;
	font-size: 22px;
	margin-right: 10px;
}
/* ... */

